Convert to Java17
Also use some of the new Java features released since Java 11

Changes:
- Changed release property in top level pom.xml to 17
- Updated release used in Git workflow to java 17
- UIConfig uses the new 'record' keyword
- UIConfig uses the new instanceof that takes a variable avoiding the cast
- TaskCommand uses the new 'switch' lambda logic
- UnitWindow uses the new toList from teh Stream class

Part of #820